--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,13 +15,13 @@
     <header>
         <div class="main-header-top-bar">
             <div class="top-header">
-            <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
-            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
-            <!-- logo-mobile -->
-            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
-            <form action='https://www.google.com/search?q=' method="get" class="search-bar">
-                <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
-                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
+                <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+                <!-- logo-mobile -->
+                <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
+                <form action='https://www.google.com/search?q=' method="get" class="search-bar">
+                    <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
             </form>
             <div class="icons-top-bar">
@@ -86,39 +86,40 @@
         <section class="inSale">
             <h2>LO MEJOR DEL DÍA</h2>
             <div class="products">
-                <article>
-                <a href="/productDetail"><img src="/img/asus.jpg" alt="producto"></a>
-                <div class="productInfo">
-                    <p class="price">$59.99</p>
-                    <p class="discount">25% off</p>
-                    <p class="description">Laptop</p>
-                </div>
-            </article>
+                    <article>
+                        <img src="/img/asus.jpg" alt="producto">
+                        <div class="productInfo">
+                            <p class="price">$59.99</p>
+                            <p class="discount">25% off</p>
+                            <a href="/productDetail" class="description">Laptop</a>
+                        </div>
+                    </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/lenovo.jpg" alt="producto"></a>
+                    <img src="/img/lenovo.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
+                        
                     </div>
                 </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/hp.jpg" alt="producto"></a>
+                    <img src="/img/hp.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/bangho.jpg" alt="producto"></a>
+                    <img src="/img/bangho.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
             </div>
@@ -128,38 +129,38 @@
             <h2>RECOMENDACIONES</h2>
             <div class="products">
                 <article>
-                    <a href="/productDetail"><img src="/img/asus.jpg" alt="producto"></a>
+                    <img src="/img/asus.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/lenovo.jpg" alt="producto"></a>
+                    <img src="/img/lenovo.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/hp.jpg" alt="producto"></a>
+                    <img src="/img/hp.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
 
                 <article>
-                    <a href="/productDetail"><img src="/img/bangho.jpg" alt="producto"></a>
+                    <img src="/img/bangho.jpg" alt="producto">
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
+                        <a href="/productDetail" class="description">Laptop</a>
                     </div>
                 </article>
             </div>
