--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="main-header-top-bar">
             <div class="top-header">
@@ -60,56 +59,141 @@
                 </div>
             </a>
         </nav>
-
+        <!--             <div class="banner">
+                <img src="/img/banner2.jpg" alt="banner">
+                <i class="fa-solid fa-angle-left" id="left"></i>
+                <i class="fa-solid fa-angle-right" id="right"></i>
+                <div class="dots">
+                    <i class="fa-solid fa-circle" id="bn1"></i>
+                    <i class="fa-solid fa-circle" id="bn2"></i>
+                    <i class="fa-solid fa-circle" id="bn3"></i>
+                </div>
+                <img src="/img/banner2.jpg" alt="banner">
+            </div> -->
     </header>
 
     <main>
-        <div class="contenedor_central">
-            <section class="subtitulo">
-                <h2>PC INTEL CELERON DUAL CORE G5905 SSD 240</h2>
-            </section>
-            <section>
-                <div class="contenedor_imagen_prod">
-                    <img class="imagen_prod" src="img/hp.jpg" alt="img_hp">
-                </div>
-                <div class="contenedor_texto_pago">
-                    <div class="vistas">
-                        <img class="vista" src="img/hp.jpg" alt="img_hp">
-                        <img class="vista" src="img/hp.jpg" alt="img_hp">
-                        <img class="vista" src="img/hp.jpg" alt="img_hp">
-                    </div>
-
-                    <div class="precio-producto">
-                        $154.699
-                    </div>
-
-                    <div class="descripcion-producto">
-                        <p>La laptop HP 245 sigue el ritmo de estilos de trabajo móviles gracias a un diseño delgado y ligero. La hermosa pantalla con su angosto borde y relación de pantalla y cuerpo grande brinda amplio espacio para trabajar o reproducir contenido.</p>
-
-                    </div>
-
-                    <div class="boton-comprar">
-                        <button type="submit" class="comprar">Agregar al carrito</button>
-                    </div>
-
-                    <div class="box_texto_pago">
-                        <h3 class="subtitulo_texto_pago">Medios de Pago</h3>
-                        <p class="texto_pago"> Tarjetas de Credito,debito,Mercado Pago,Transferencia Bancaria
-                        </p>
-                    </div>
-                    <div class="box_texto_pago">
-                        <h3 class="subtitulo_texto_pago">Forma de retiro</h3>
-                        <p class="texto_pago">Por sucursal o Envio Gratuito a todo el pais
-                        </p>
-                    </div>
-
-                </div>
-        </div>
+        <section class="route-container">
+            <h2 class="route-text">NOTEBOOK HP 245 G8 RYZEN 5 5500U 8GB 1TB 14 FREE</h2>
         </section>
+        <section class="main-container">
+            <div class="images">
+                <div class="main-image">
+                    <img class="prod-image" src="img/hp.jpg" alt="img_hp">
+                </div>
+                <div class="container-views">
+                    <img class="view_prod" src="img/hp1.jpg" alt="img_hp1">
+                    <img class="view_prod" src="img/hp2.jpg" alt="img_hp2">
+                    <img class="view_prod" src="img/hp3.png" alt="img_hp3">
+                </div>
+            </div>
+            <div class="text-options">
+                <div class="box_texto_pago">
+                    <h3 class="subtitulo_texto_pago">Precio</h3>
+                    <p class="final-value">$116.000</p>
+                    <div class="discount-container">
+                        <p class="price">$154.699</p>
+                        <p class="discount">25% off</p>
+                    </div>
 
+
+                </div>
+                <div class="box_texto_pago">
+                    <h3 class="subtitulo_texto_pago">Medios de Pago</h3>
+                    <p class="texto_pago"> Tarjetas de Credito, debito, Mercado Pago, Transferencia Bancaria
+                    </p>
+                </div>
+
+                <div class="box_texto_pago">
+                    <h3 class="subtitulo_texto_pago">Formas de retiro</h3>
+                    <p class="texto_pago">Recoger en nuestras sucursales o Envío gratuito a todo el país
+                    </p>
+                </div>
+                <div class="button-container">
+                    <button class="btn_compra">Agregar al carrito</button>
+                </div>
+
+
+            </div>
+
+        </section>
+        <section class="container-description">
+            <h3 class="titulo_descripcion_prod">Descripción el Producto</h3>
+            <p class="prod-description">La laptop HP 245 sigue el ritmo de estilos de trabajo móviles gracias a un
+                diseño delgado y ligero. La hermosa pantalla con su angosto borde y relación de pantalla y cuerpo grande
+                brinda amplio espacio para trabajar o reproducir contenido.</p>
+
+        </section>
+        <section class="product-atributes">
+            <h3 class="titulo_descripcion_prod">Características</h3>
+            <div class="container-atributes">
+                <div class="atribute">
+                    <h2>Almacenamiento</h2>
+                    <p>1 TB</p>
+                    <p>Solid state</p>
+                </div>
+                <div class="atribute">
+                    <h2>RAM</h2>
+                    <p>4 GB</p>
+                    <p>Expandible</p>
+                </div>
+
+                <div class="atribute">
+                    <h2>Pantalla</h2>
+                    <p>15.6"</p>
+                    <p>LED 1366x768</p>
+                </div>
+                <div class="atribute">
+                    <h2>Conectividad</h2>
+                    <p>Wi-fi</p>
+                    <p>Bluetooth</p>
+                </div>
+                <div class="atribute">
+                    <h2>Procesador</h2>
+                    <p>3.10 Ghz</p>
+                    <p>Caché: 4 Mb</p>
+                </div>
+                <div class="atribute">
+                    <h2>Sistema operativo</h2>
+                    <p>Windows 10 64 bits</p>
+                </div>
+            </div>
+
+        </section>
+        <div class="whatsapp">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <!-- <section class="box_contenedor_ofertas">
+            <div class="box">
+                <h3 class="h3_oferta">Ofertas</h3>
+                <img src="img/asus.jpg" alt="img_oferta" height="70px">
+                <h3 class="nombre_oferta">ASUS</h3>
+                <p>Lorem ipsum dolor sit.</p>
+                <p>Velit eum culpa quas?</p>
+                <p>Quod tenetur inventore amet?</p>
+                <p>Harum suscipit dolorem nesciunt?</p>
+            </div>
+            <div class="box">
+                <h3 class="h3_oferta">Ofertas</h3>
+                <img src="img/lenovo.jpg" alt="img_oferta" height="70px">
+                <h3 class="nombre_oferta">LENOVO</h3>
+                <p>Lorem ipsum dolor sit.</p>
+                <p>Velit eum culpa quas?</p>
+                <p>Quod tenetur inventore amet?</p>
+                <p>Harum suscipit dolorem nesciunt?</p>
+            </div>
+            <div class="box">
+                <h3 class="h3_oferta">Ofertas</h3>
+                <img src="img/macbook.jpg" alt="img_oferta" height="70px">
+                <h3 class="nombre_oferta">MACBOOK</h3>
+                <p>Lorem ipsum dolor sit.</p>
+                <p>Velit eum culpa quas?</p>
+                <p>Quod tenetur inventore amet?</p>
+                <p>Harum suscipit dolorem nesciunt?</p>
+            </div>
+        </section> -->
 
     </main>
-
     <footer>
         <div class="footer">
             <div class="redes">
