--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,7 +17,41 @@
 </head>
 
 <body>
-    <%- include('./partials/header'); %>
+    <!-- HEADER AND NAVIGATION BAR-->
+    <%- include('partials/header') %>
+
+    <main>
+        <!-- ingresa -->
+        <div class="mover">
+            <form action="/login" method="post" class="form-login">
+                <h5>Iniciar sesión con mi email</h5>
+                <!--<input class="cajita" type="checkbox" name="" value="">  -->
+                <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value=""
+                    placeholder="Usuario" required minlength="3">
+                <input class="controls" type="password" style="color: rgb(255, 255, 255);" name="contrasena" value=""
+                    placeholder="Contraseña" autocomplete="current-password" required minlength="3">
+                <div class="texto-login">
+                    <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
+                    <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>
+                </div>
+                <div class="button-container">
+                    <a style="text-decoration: none;" href="/index"><button type="submit"
+                            style="color: #000;">LOGIN</button></a>
+                </div>
+                <p></p>
+                <div class="social">
+                    <h5 class="google" style="padding-bottom: 32px">Ingresar con Google
+                        <i class="fab fa-google"></i>
+                    </h5>
+                    <h5 class="facebook" style="padding-bottom: 32px;">Ingresar con Facebook
+                        <i class="fab fa-facebook-square"></i>
+                    </h5>
+                </div>
+            </form>
+        </div>
+
+    </main>
+
     <div class="whatsapp">
         <a href="https://support.google.com/?hl=es"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
