--- a/public/css/register.css
+++ b/public/css/register.css
@@ -437,7 +437,26 @@ form div button {
 .facebook i {
     margin-left: 10px;
 }
+/* WHATSAPP */
+.whatsapp {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(102, 102, 102, 0.75);
+    position: fixed;
+    bottom: 20px;
+    right: 19px;
+}
 
+.whatsapp i {
+    font-size: 35px;
+    color: #7EFF00;
+    position: fixed;
+    bottom: 28px;
+    right: 28px;
+    font-weight: bold;
+
+}
 /* FOOTER */
 
 footer {
