comentarios de partials

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,7 +17,10 @@
 </head> 
 
 <body>
+     <!-- HEADER AND NAV BAR -->
     <%- include('./partials/header'); %>
+
+    <!-- WHATSAPP -->
     <%- include('./partials/whatsapp'); %>
     <main>
         <!-- ingresa -->
@@ -50,7 +53,7 @@
         </div>
 
     </main>
-
+        <!-- FOOTER -->
         <%- include('./partials/footer'); %>
 </body>
 
