sprint 3 con ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,6 +60,14 @@
                             <a href="/productDetail" class="description">Laptop</a>
                         </div>
                     </article>
+                    <article>
+                        <img src="/img/bangho.jpg" alt="producto">
+                        <div class="productInfo">
+                            <p class="price">$59.99</p>
+                            <p class="discount">25% off</p>
+                            <a href="/productDetail" class="description">Laptop</a>
+                        </div>
+                    </article>
 
 
         <section class="recomended">
@@ -102,6 +110,7 @@
                 </article>
             </div>
         </section>
+
 
 
     </main>
