--- a/public/css/register.css
+++ b/public/css/register.css
@@ -92,7 +92,7 @@ header {
     color: #7EFF00;
     font-size: 14px;
     align-items: center;
-    padding: 10px
+    padding: 8px
 }
 
 .icons-top-bar {
@@ -461,16 +461,18 @@ form div button {
 
 footer {
     background-color: #000;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
 .texto-redes {
     color: #fff;
     padding: 15px;
-    font-size: 18px;
+    font-size: 14px;
     text-align: center;
 }
 
 .redes {
+    border-top: 1px solid #cac7ff;
     border-bottom: 1px solid #4A4A4A;
     border-radius: 1px;
 }
@@ -500,7 +502,7 @@ footer {
 }
 
 .informacion ul li {
-    font-size: 16px;
+    font-size: 12px;
     color: #7EFF00;
     list-style-type: none;
     justify-content: center;
@@ -543,9 +545,11 @@ footer {
 
 .copyright {
     color: #666666;
-    font-size: 14px;
+    font-size: 12px;
     padding-top: 10px;
+    text-align: center;
 }
+
 
 @media (min-width:361px) {
     
@@ -553,29 +557,28 @@ footer {
         font-size: 16px;
     }
 
-    .aclaracion {
-        font-size: 18px;
-    }
-
     .informacion {
         justify-content: space-between;
     }
 
+    .aclaracion {
+        font-size: 12px;
+    }
+    
     .lista1 h4 {
         padding-bottom: 10px;
-        font-size: 18px;
+        font-size: 14px;
     }
-
+    
     .lista2 h4 {
         padding-bottom: 10px;
-        font-size: 18px;
+        font-size: 14px;
     }
-
+    
     .lista3 h4 {
         padding-bottom: 10px;
-        font-size: 18px;
+        font-size: 14px;
     }
-
 }
 
 @media (min-width:767px) {
@@ -597,7 +600,6 @@ footer {
         display: flex;
         flex-direction: row;
         border-bottom: solid 1px #cac7ff;
-        padding: 15px;
         align-items: center;
         justify-content: space-between;
         width: 100%;
@@ -607,12 +609,8 @@ footer {
     .icons-top-bar {
         display: flex;
         align-items: flex-end;
-        width: 45%;
+        width: 55%;
         justify-content: flex-end;
-    }
-
-    .search-bar {
-        width: 300px;
     }
 
     .icons-top-bar a {
@@ -641,7 +639,6 @@ footer {
     .informacion {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
 
     }
 
@@ -658,13 +655,15 @@ footer {
     }
 
     .lista1 {
-        padding: 15px;
-        padding-left: 5px;
+        flex:3.33
     }
 
+    .lista2{
+        flex:3.33
+    }
 
     .lista3 {
-        padding-right: 5px;
+        flex:3.33
     }
 
 
