--- a/src/views/partials/whatsapp.ejs
+++ b/src/views/partials/whatsapp.ejs
@@ -1,3 +1,3 @@
 <div class="whatsapp">
-    <a href="https://support.google.com/?hl=es"><i class="fa-brands fa-whatsapp"></i></a>
+    <a href="https://wa.me/573333333333" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
 </div>
